manifest/phantomtest.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: phantomtest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phantomtest-api
  namespace: phantomtest
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: phantomtest-api
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phantomtest-api
    spec:
      containers:
        - image: zot.bitey.life/phantomtest-api:1.0.0
          imagePullPolicy: Always
          name: phantomtest-api
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: phantomtest-api
  namespace: phantomtest
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: phantomtest-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phantomtest-auth
  namespace: phantomtest
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: phantomtest-auth
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phantomtest-auth
    spec:
      containers:
        - image: zot.bitey.life/phantomtest-auth:1.0.0
          imagePullPolicy: Always
          name: phantomtest-auth
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: phantomtest-auth
  namespace: phantomtest
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: phantomtest-auth
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phantomtest
  namespace: phantomtest
spec:
  parentRefs:
    - name: external-traefik
      namespace: gateway
      sectionName: https
  hostnames:
    - "pt.bitey.life"
  rules:
    # https://doc.traefik.io/traefik-hub/api-gateway/reference/routing/kubernetes/ref-routing-provider-gatewayapi#using-traefik-middleware-as-httproute-filter
    - matches:
        - path: 
            type: PathPrefix
            value: /.well-known/
        - path: 
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: phantomtest-auth
          port: 8080
    - matches:
        - path: 
            type: PathPrefix
            value: /
      backendRefs:
        - name: phantomtest-api
          port: 3000
      # filters:
      #   - type: ExtensionRef
      #     extensionRef:
      #       group: traefik.io
      #       kind: Middleware
      #       name: auth-middleware
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: phantomtest
spec:
  forwardAuth:
    address: https://pt.bitey.life/auth/jwt
    authRequestHeaders:
      - "Authorization"
      - "X-Api-Key"
    authResponseHeaders:
      - Authorization
